Updated server URL

--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -38,7 +38,7 @@
 
 				 function postRequest(question){
 						 var xhr = new XMLHttpRequest();
-						 var url = "http://localhost:3000/analysis";
+						 var url = "http://pilot-risk-analysis.inrialpes.fr/analysis";
 						 xhr.open("POST", url, true);
 						 xhr.setRequestHeader("Content-Type", "application/json");
 						 xhr.onreadystatechange = function () {
