--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -134,8 +134,14 @@
 																<div class="col-sm">
 																				<h4>Information</h4>
 																				<p>
-																								This page provides a UI to perform risks analyses using
-																								the technology presented in the paper XXX.
+																								This website provides a user-friendly
+																								interface for users to perform risk analysis
+																								on privacy policies.																								
+																				</p>
+																				<p>
+																								Simply define your privacy policy in the form
+																								below, pick your risk assumptions and click on <i>Verify!</i> to
+																								automatically get the results.
 																				</p>
 																</div>
 												</div>
