Minor changes on alignment

--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -160,7 +160,7 @@
 																												<option value="parketww"><i>ParketWW</i></option>
 																												<option value="carinsure"><i>CarInsure</i></option>
 																								</select>
-																								<label>  &nbsp; may collect data of type  &nbsp; </label>
+																								<label> &nbsp; may collect data of type &nbsp; </label>
 																								<select class="custom-select form-control-sm col-2 datatype-specification" id="collectDatatype" onChange="resetAnalysesResults()">
 																												<option selected value="number_plate"><i>number plate</i></option>
 																								</select>
@@ -215,7 +215,7 @@
 																																<option selected value="parketww">ParketWW</option>
 																																<option value="carinsure">CarInsure</option>
 																								</select>
-																								<label >&nbsp; may transfer personal data to &nbsp; </label>
+																								<label>may transfer personal data to</label>
 																								<select class="custom-select form-control-sm col-2 entity-specification" 
 																																							id="illegalTransferEntityTarget" 
 																																							onChange="resetAnalysesResults()">
@@ -223,7 +223,7 @@
 																																<option value="parketww">ParketWW</option>
 																																<option selected value="carinsure">CarInsure</option>
 																								</select>
-																								<label>&nbsp; disregarding the associated DS policies.</label>
+																								<label>disregarding the associated DS policies.</label>
 																				</div>
 																				<!-- </li>
 																									<li> -->
