--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -91,7 +91,7 @@
 									}
 
 									function resetAnalysesResults() {
-													default_value = "Not analysed";
+													default_value = "Not analyzed";
 													document.getElementById('never_reaches_parket').innerHTML = default_value;
 													document.getElementById('never_reaches_parketww').innerHTML = default_value;
 													document.getElementById('never_reaches_carinsure').innerHTML = default_value;
