--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -260,43 +260,43 @@
 																				<ul id="riskAnalysisResults">
 																								<li>Can <i>Parket</i> receive my data? 
 																												<br>
-																												<span class="badge badge-secondary" id="never_reaches_parket">Not analysed</span>
+																												<span class="badge badge-secondary" id="never_reaches_parket">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(never_reaches_parket)">Verify!</button>
 																								</li>
 																								<li>Can <i>ParketWW</i> receive my data? 
 																												<br>
-																												<span class="badge badge-secondary" id="never_reaches_parketww">Not analysed</span>
+																												<span class="badge badge-secondary" id="never_reaches_parketww">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(never_reaches_parketww)">Verify!</button>
 																								</li>
 																								<li>Can <i>CarInsurance</i> receive my data? 
 																												<br>
-																												<span class="badge badge-secondary" id="never_reaches_carinsure">Not analysed</span>
+																												<span class="badge badge-secondary" id="never_reaches_carinsure">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(never_reaches_carinsure)">Verify!</button>
 																								</li>
 																								<li>Can <i>Parket</i> use my data for other purpose than <i>commercial offers</i>? 
 																												<br>
-																												<span class="badge badge-secondary" id="can_parket_use_for_commercial_offers">Not analysed</span>
+																												<span class="badge badge-secondary" id="can_parket_use_for_commercial_offers">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(can_parket_use_for_commercial_offers)">Verify!</button>
 																								</li>
 																								<li>Can <i>ParketWW</i> use my data for other purpose than <i>commercial offers</i>?
 																												<br>
-																												<span class="badge badge-secondary" id="can_parketww_use_for_commercial_offers">Not analysed</span>
+																												<span class="badge badge-secondary" id="can_parketww_use_for_commercial_offers">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(can_parketww_use_for_commercial_offers)">Verify!</button>
 																								</li>
 																								<li>Can <i>CarInsure</i> use my data for <i>profiling</i>?
 																												<br>
-																												<span class="badge badge-secondary" id="can_carinsure_use_for_profiling">Not analysed</span>
+																												<span class="badge badge-secondary" id="can_carinsure_use_for_profiling">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(can_carinsure_use_for_profiling)">Verify!</button>
 																								</li>
 																								<p>The questions below are not part of the accompanying paper.</p>
 																								<li>Can <i>Parket</i> use my data for other purpose than that of my PILOT policy? 
 																												<br>
-																												<span class="badge badge-secondary" id="collection_parket_according_to_policy">Not analysed</span>
+																												<span class="badge badge-secondary" id="collection_parket_according_to_policy">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(collection_parket_according_to_policy)">Verify!</button>
 																								</li>
 																								<li>Can <i>ParketWW</i> use my data for other purpose than that of my PILOT policy?
 																												<br>
-																												<span class="badge badge-secondary" id="transfer_to_parketww_according_to_policy">Not analysed</span>
+																												<span class="badge badge-secondary" id="transfer_to_parketww_according_to_policy">Not analyzed</span>
 																												<button class="btn btn-success btn-sm" onclick="postRequest(transfer_to_parketww_according_to_policy)">Verify!</button>
 																								</li>
 																								<!-- 
