Updated title of the website

--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -113,7 +113,7 @@
 								<link rel="stylesheet" href="css/style.css">
 
 								<!-- Title of the website -->
-								<title>PILOT Risk Analysis</title>
+								<title>Risk Analysis of PILOT Privacy Policies</title>
 				</head>
 				<body>
 								
@@ -122,7 +122,7 @@
 												<div class="row" style="padding-top: 1rem"> <!--Added 1rem of padding to match the <hr> -->
 																<div class="col-sm-12">
 																				<br>																				
-																				<h1>PILOT Risk Analysis</h1>
+																				<h1>Risk Analysis of PILOT Privacy Policies</h1>
 																</div>
 												</div>
 
