--- a/web-app/ui/index.html
+++ b/web-app/ui/index.html
@@ -317,7 +317,7 @@
 																								<hr>
 																								<div class="row bd-footer">
 																												<div class="col-lg-12">
-																																<p><font size="2">Copyright &copy; Raúl Pardo<font></p>
+																														<p><font size="2">Copyright &copy; <a href="http://raulpardo.net/">Raúl Pardo</a> | <a href="https://team.inria.fr/privatics/">Privatics - Inria</a><font></p>
 																												</div>
 																								</div>
 																				</footer>
